Thu Sep  5 13:45 2013 CDT
    * acp.js, actionlog.js, api.js, channel.js, chatcommand.js, config.js,
      customembed.js, database.js, filter.js, get-info.js, logger.js,
      media.js, notwebsocket.js, playlist.js, poll.js, rank.js, server.js,
      stats.js, ullist.js, user.js, utilities.js: move server
      files into lib/ folder to clean up the root directory of the project.
    * api.js: replace regex with $util.isValidChannelName (L68);
      fix relative file paths (per moving api.js to lib/)
    * server.js: fix relative file paths
    * channel.js: fix relative file paths

Wed Sep  4 22:45 2013 CDT
    * changelog: initialize changelog file

Wed Sep  4 17:47 2013 CDT
    * www/assets/js/data.js: add CHANNEL.usercount variable
    * www/assets/js/callbacks.js: update CHANNEL.usercount variable when
      the usercount changes
    * www/assets/js/util.js: add "Anonymous" to the usercount breakdown
      display (addresses Issue #270 <Suggestion: Put Mute button on Right
      click menu + anon count>)

Changelog established on Wed Sep  4 2013