@@ -1,3 +1,9 @@
+Thu Sep  5 22:52 2013 CDT
+    * www/assets/js/callbacks.js: Disable the channel registration button
+      and change its text while a registration attempt is being processed
+      (prevents DB errors from impatient people spamming the button)
+      (addresses Issue #276 <Remove register channel button after click> )
+
 Thu Sep  5 13:45 2013 CDT
     * acp.js, actionlog.js, api.js, channel.js, chatcommand.js, config.js,
       customembed.js, database.js, filter.js, get-info.js, logger.js,
